[gd_scene load_steps=11 format=2]

[ext_resource path="res://Racoon-run1.png" type="Texture" id=1]
[ext_resource path="res://Racoon-run2.png" type="Texture" id=2]
[ext_resource path="res://Racoon-run3.png" type="Texture" id=3]
[ext_resource path="res://KinematicBody2D.gd" type="Script" id=4]
[ext_resource path="res://8-bit-explosion-95847.wav" type="AudioStream" id=5]
[ext_resource path="res://Racoon-death.png" type="Texture" id=6]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "Death",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "Run",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 7.95313, 0.568789 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 5.08233, 3.2587 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 9.09954, 3.54182 )

[node name="KinematicBody2D" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 7
script = ExtResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -8.01674 )
frames = SubResource( 1 )
animation = "Death"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.015625, -0.600828 )
shape = SubResource( 2 )

[node name="LedgeCheckRight" type="RayCast2D" parent="."]
position = Vector2( 4.7247, -0.984314 )
enabled = true
cast_to = Vector2( 0, 2 )

[node name="LedgeCheckLeft" type="RayCast2D" parent="."]
position = Vector2( -3.89788, -0.984314 )
enabled = true
cast_to = Vector2( 0, 2 )

[node name="top_checker" type="Area2D" parent="."]
position = Vector2( 0, -8.01674 )
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="top_checker"]
position = Vector2( -1.36645, -3.74781 )
shape = SubResource( 3 )

[node name="sides_checker" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="sides_checker"]
position = Vector2( -0.0302131, -4.91984 )
shape = SubResource( 4 )

[node name="Hit" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -10.0

[connection signal="body_entered" from="top_checker" to="." method="_on_top_checker_body_entered"]
[connection signal="body_entered" from="sides_checker" to="." method="_on_sides_checker_body_entered"]
